Bug #1288 - Mobile: Buttons under the avatar are cut off

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1181,6 +1181,12 @@ body{
     }
 }
 /**group profiles**/
+#course-header-avatar{
+    @media (max-width: @screen-xs-min){
+        width: 100%;
+        max-width: 225px;
+    }
+}
 .info-panel{
     margin-top: 30px;
     padding: 0 1.5%;
